# MODULUS

./: .gitignore  CONTRIBUTING.md  IP_DUE_DILIGENCE_REPORT_2026-03-04.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: README.md
docs/: DOCUMENTATION.md  integration_guide.md
docs/api_generated/: INDEX.md  modulus.md  modulus_optim.md  modulus_optim_groups.md  modulus_optim_hyperball.md  modulus_optim_masks.md  modulus_optim_presets.md  modulus_optim_schedules.md  modulus_peft.md  modulus_peft_lora.md  modulus_training.md  modulus_training_harness.md
docs/context/: MOTIVATION_AND_CONTEXT.md
docs/engineering/: ENGINEERING_HANDOFF_GCT_2026-03-04.md  INSTALL.md  LINT_PHASE_PLAN.md
docs/ip/: SIGNOFF.md  ai_origin_evidence.md  provenance.md
docs/pedagogy/: LEARNING_PATH.md
docs/roadmap/: FUTURE_EXTENSIONS.md
modulus/: __init__.py
modulus/examples/: train_grouped_hyperball_lora_demo.py
modulus/optim/: __init__.py  groups.py  hyperball.py  masks.py  presets.py  schedules.py
modulus/peft/: __init__.py  lora.py
modulus/tests/: test_groups.py  test_harness.py  test_hyperball.py  test_lora_grad.py  test_presets.py
modulus/training/: __init__.py  harness.py
notebooks/: MODULUS_Pedagogical_Walkthrough.ipynb
scripts/: build_benchmark_report.py  generate_api_docs.py  run_benchmarks.py  run_style_lint_phase.py  validate_integration_tree.py
